# rs-mock-server

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  example_auth_usage.md
.github/: PRE_COMMIT_SETUP.md
.github/workflows/: release.yml
docs/: 01-basic-routing.md  02-rest-apis.md  03-authentication.md  04-file-uploads.md  05-static-files.md  06-jgd-files.md  07-web-interface.md  08-hot-reload.md  09-sql-routes.md  10-configurations.md  11-graphql.md  12-generator.md  13-schema-loading.md  14-collection-loading.md  authentication.md  rest-apis.md  web-interface.md
example/: Cargo.toml  README.md
example/mocks/: hello.json
example/mocks/users/: rest.json
example/src/: main.rs
mocks/account/login/: post.json
mocks/auth/: {auth}.json  {auth}.toml
mocks/cities/: rest{none}.json  rest{none}.toml
mocks/graphql/: cmp_01.json  queryPeople.json  queryUsers.jgd
mocks/jgd-examples/: array-object-root.jgd  customers-orders.jgd  entities-blog-system.jgd  ranged-array-object-root.jgd  root-address-fr-fr.jgd  root-e-commerce.jgd  root-user.jgd  single-object-root.jgd  user-post-entities.jgd
mocks/orderItems/: rest{int}.json
mocks/orders/: rest{int}.json
mocks/products/: rest{_id:int}.json
mocks/public-static/: home.html
mocks/reports/: companies.sql  companies{id}.sql
mocks/schema-reports/: invoices-by-supplier{id}.sql  invoices.sql  payments.sql  payment{id}.sql  suppliers.sql  supplier{id}.sql
mocks/users/: get.json  get{2}.json  get{3-5}.json  get{luis}.json  post.json
mocks/warehouse-reports/: asset-status-by-warehouse.sql  assets-by-warehouse{id}.sql  assets-by-zone{id}.sql  assets.sql  capacity-by-country.sql  cold-chain-orders.sql  customer-demand.sql  customers.sql  customers{id}.sql  demand-by-product.sql  inventory-by-location.sql  inventory-by-product{id}.sql  inventory-by-warehouse{id}.sql  inventory.sql  locations.sql  locations{id}.sql  order-detail{id}.sql  order-items-by-order{id}.sql  orders-by-customer{id}.sql  orders-by-warehouse{id}.sql  orders.sql  product-availability{id}.sql  products.sql  shipment-carrier-summary.sql  shipments-by-carrier{id}.sql  shipments-by-order{id}.sql  shipments.sql  transfers-from-warehouse{id}.sql  transfers-to-warehouse{id}.sql  transfers.sql  warehouse-throughput.sql  zone-capacity-summary.sql  zones-by-warehouse{id}.sql  zones.sql
mocks/{collections}/: warehouse_assets.json  warehouse_carriers.json  warehouse_customers.json  warehouse_inventory.json  warehouse_locations.json  warehouse_order_items.json  warehouse_orders.json  warehouse_products.json  warehouse_sensor_events.jgd  warehouse_shipments.json  warehouse_transfers.json  warehouse_zones.json
mocks/{schemas}/: catalog_payments.schema  db.schema
mocks/{upload}-docs/: config.toml
scripts/: gen-changelog.sh  setup-git-hooks.sh
src/: app.rs  build_dyn_routes.rs  collection_files.rs  criteria.rs  handlers.rs  home.html  id_manager.rs  in_memory_collection.rs  index.html  lib.rs  link.rs  main.rs  pages.rs  schema_files.rs  tls.rs  upload_configuration.rs  utils.rs
src/generator/: content.rs  domain.rs  main_config.rs  mod.rs  paths.rs  writer.rs
src/generator/tui/: app.rs  mod.rs  render.rs  terminal.rs
src/generator/tui/components/: common.rs  field_edit.rs  field_editor.rs  file_type.rs  main_config.rs  mod.rs  review.rs  route_collection.rs  route_kind.rs  route_options.rs  route_path.rs  top_menu.rs
src/handlers/: auth_handlers.rs  basic_handlers.rs  collections_handlers.rs  error_response.rs  graphql_handlers.rs  in_memory_collection.rs  mod.rs  rest_handlers.rs  schema_handlers.rs  upload_handlers.rs  utils.rs
src/home/: index.html  mock-routes.js  scripts.js  styles.css
src/memory_db/: collection_config.rs  constraint.rs  criteria.rs  criteria_builder.rs  db.rs  id_manager.rs  in_memory_collection.rs  memory_collection.rs  mod.rs  string_pointer.rs
src/route_builder/: common.rs  config.rs  mod.rs  route.rs  route_auth.rs  route_basic.rs  route_graphql.rs  route_manager.rs  route_params.rs  route_public.rs  route_rest.rs  route_upload.rs
