[package]
name = "rs-mock-server"
version = "0.6.12"
edition = "2024"
description = "A simple, file-based mock API server that maps your directory structure to HTTP and GraphQL routes. Ideal for local development and testing."
license = "MIT"
authors = ["Luís Vendrame <lvendrame@gmail.com>"]
repository = "https://github.com/lvendrame/rs-mock-server"
readme = "README.md"
keywords = ["mock", "server", "api", "http", "graphql"]
categories = ["command-line-utilities", "development-tools::testing", "web-programming::http-server"]
exclude = [
    ".github/*",
    "images/*",
    "mocks/*",
    "scripts/*",
    ".editorconfig",
    ".gitignore",
    "Makefile",
]

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
clap = { version = "4.5.48", features = ["derive"] }
fosk = "0.1.13"
http = "1.3.1"
hyper = "1.7.0"
once_cell = "1.21.3"
regex = "1.11.2"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "io-util", "signal"] }
tokio-util = { version = "0.7.16", features = ["io"] }
mime_guess = "2.0"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs", "normalize-path", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1" , features = ["v4"] }
jsonwebtoken = "9.3.0"
serde = { version = "1.0.226", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
terminal-link = "0.1.0"
jgd-rs = "0.2.1"
notify = "8.2.0"
toml = "0.9.7"
async-graphql = { version = "7.0.17", features = ["dynamic-schema"]}
async-graphql-axum = "7.0.17"
graphql-parser = "0.4"

[dev-dependencies]
tempfile = "3.22.0"
